tests/NormalTests/paczka1/small_fuzzy/35423034.err
Error in line 6: A88 A62 30,1
Error in line 2: PUDvriJEQ A88 82,5
Error in line 7: RbYZd A183 40,0
Error in line 14: 3AKveII A62 60,2
Error in line 8: A88 A183 28,5
